CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(tradelib)

SET(POCO_ROOT C:/3rdparty/poco CACHE PATH "POCO library location")

INCLUDE_DIRECTORIES(${POCO_ROOT}/Foundation/include)
INCLUDE_DIRECTORIES(${POCO_ROOT}/Data/include)
INCLUDE_DIRECTORIES(${POCO_ROOT}/Data/SQLite/include)
INCLUDE_DIRECTORIES(${POCO_ROOT}/JSON/include)
INCLUDE_DIRECTORIES(${POCO_ROOT}/Net/include)
INCLUDE_DIRECTORIES(${POCO_ROOT}/Util/include)
INCLUDE_DIRECTORIES(${POCO_ROOT}/XML/include)
INCLUDE_DIRECTORIES(${POCO_ROOT}/Zip/include)

LINK_DIRECTORIES(${POCO_ROOT}/lib64)

ADD_DEFINITIONS(-DNOMINMAX -D_SCL_SECURE_NO_WARNINGS)

ADD_SUBDIRECTORY(tradelib)
ADD_SUBDIRECTORY(gtests)